--- a/miniChallenge/Base.lproj/GameViewController.storyboard
+++ b/miniChallenge/Base.lproj/GameViewController.storyboard
@@ -24,7 +24,11 @@
                             <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="UVd-Wa-6hN">
                                 <rect key="frame" x="0.0" y="20" width="667" height="355"/>
                             </imageView>
-                            <view contentMode="scaleToFill" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="ctw-t6-yP2">
+                            <view hidden="YES" alpha="0.69999999999999996" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="Wlx-bc-7gX">
+                                <rect key="frame" x="0.0" y="20" width="667" height="355"/>
+                                <color key="backgroundColor" red="0.027450980392156862" green="0.12941176470588234" blue="0.17254901960784313" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                            </view>
+                            <view hidden="YES" contentMode="scaleToFill" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="ctw-t6-yP2">
                                 <rect key="frame" x="105" y="25" width="456" height="344"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                 <subviews>
@@ -82,9 +86,51 @@
                                 </subviews>
                                 <color key="backgroundColor" red="0.071715325163136501" green="0.92366986947520258" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                             </view>
-                            <view hidden="YES" alpha="0.69999999999999996" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="Wlx-bc-7gX">
-                                <rect key="frame" x="0.0" y="20" width="667" height="355"/>
-                                <color key="backgroundColor" red="0.027450980392156862" green="0.12941176470588234" blue="0.17254901960784313" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                            <view hidden="YES" contentMode="scaleToFill" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="UOA-zT-18C">
+                                <rect key="frame" x="105" y="25" width="456" height="344"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <subviews>
+                                    <view contentMode="scaleToFill" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="HBJ-bG-xUc">
+                                        <rect key="frame" x="13" y="147" width="431" height="177"/>
+                                        <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                        <subviews>
+                                            <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="yLi-zE-PcI">
+                                                <rect key="frame" x="155" y="8" width="120" height="45"/>
+                                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                                <state key="normal" title="Alt 1"/>
+                                            </button>
+                                            <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="b2H-aw-r5N">
+                                                <rect key="frame" x="155" y="37" width="120" height="45"/>
+                                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                                <state key="normal" title="Alt 2"/>
+                                            </button>
+                                            <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="pDp-4r-jpL">
+                                                <rect key="frame" x="155" y="67" width="120" height="45"/>
+                                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                                <state key="normal" title="Alt 3"/>
+                                            </button>
+                                            <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="cW4-PL-5Wa">
+                                                <rect key="frame" x="155" y="97" width="120" height="45"/>
+                                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                                <state key="normal" title="Alt 4"/>
+                                            </button>
+                                            <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Qa6-MS-NUm">
+                                                <rect key="frame" x="155" y="125" width="120" height="45"/>
+                                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                                <state key="normal" title="Alt 5"/>
+                                            </button>
+                                        </subviews>
+                                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                    </view>
+                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Leorem ipsiuonson dolor sit amet consectetuerson adipiscien. Leorem ipsiuonson dolor sit amet consectetuerson adipiscien" textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="3" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Hx1-3P-zGU">
+                                        <rect key="frame" x="43" y="33" width="370" height="91"/>
+                                        <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                        <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                        <nil key="textColor"/>
+                                        <nil key="highlightedColor"/>
+                                    </label>
+                                </subviews>
+                                <color key="backgroundColor" red="0.071715325159999996" green="0.92366986949999996" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                             </view>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
@@ -102,8 +148,15 @@
                     <connections>
                         <outlet property="backgroundImage" destination="UVd-Wa-6hN" id="NSY-dh-DXE"/>
                         <outlet property="intermediateView" destination="Wlx-bc-7gX" id="O2A-bw-Pvu"/>
+                        <outlet property="questionView" destination="UOA-zT-18C" id="ts6-A9-cU0"/>
+                        <outlet property="selectedAlternativeFive" destination="Qa6-MS-NUm" id="UON-4r-NPW"/>
+                        <outlet property="selectedAlternativeFour" destination="cW4-PL-5Wa" id="Tq2-Nt-ZX7"/>
+                        <outlet property="selectedAlternativeOne" destination="yLi-zE-PcI" id="ugd-2D-yv5"/>
+                        <outlet property="selectedAlternativeThree" destination="pDp-4r-jpL" id="721-Ai-lMo"/>
+                        <outlet property="selectedAlternativeTwo" destination="b2H-aw-r5N" id="TOB-up-6cP"/>
                         <outlet property="selectedItemDescription" destination="Fxo-sK-QlV" id="8CQ-UW-R5c"/>
                         <outlet property="selectedItemName" destination="fTp-Ik-A8T" id="GDq-gv-6a0"/>
+                        <outlet property="selectedQuestionText" destination="Hx1-3P-zGU" id="vpU-fn-bdD"/>
                         <outlet property="selectedSubjectFive" destination="rbt-JV-36J" id="lGl-Rl-i8C"/>
                         <outlet property="selectedSubjectFour" destination="sWy-1p-78y" id="iPz-y7-7aA"/>
                         <outlet property="selectedSubjectOne" destination="LKE-fW-0K5" id="UPb-l5-s49"/>
