--- a/miniChallenge/Base.lproj/GameViewController.storyboard
+++ b/miniChallenge/Base.lproj/GameViewController.storyboard
@@ -24,8 +24,15 @@
                             <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="UVd-Wa-6hN">
                                 <rect key="frame" x="0.0" y="20" width="667" height="355"/>
                             </imageView>
-                            <view hidden="YES" alpha="0.69999999999999996" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="Wlx-bc-7gX">
-                                <rect key="frame" x="0.0" y="20" width="667" height="355"/>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="0" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="iai-GL-UrR">
+                                <rect key="frame" x="600" y="25" width="65" height="21"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMinX="YES" widthSizable="YES" heightSizable="YES" flexibleMaxY="YES"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="28"/>
+                                <color key="textColor" red="0.99965387582778931" green="0.30182969203077686" blue="0.29272650619938717" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <view hidden="YES" alpha="0.69999999999999996" contentMode="scaleToFill" misplaced="YES" translatesAutoresizingMaskIntoConstraints="NO" id="Wlx-bc-7gX">
+                                <rect key="frame" x="0.0" y="0.0" width="900" height="900"/>
                                 <color key="backgroundColor" red="0.027450980392156862" green="0.12941176470588234" blue="0.17254901960784313" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                             </view>
                             <view hidden="YES" contentMode="scaleToFill" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="ctw-t6-yP2">
@@ -132,6 +139,42 @@
                                 </subviews>
                                 <color key="backgroundColor" red="0.071715325159999996" green="0.92366986949999996" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                             </view>
+                            <view hidden="YES" contentMode="scaleToFill" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="qir-dE-vN8">
+                                <rect key="frame" x="105" y="25" width="456" height="344"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <subviews>
+                                    <view contentMode="scaleToFill" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="1Yn-0f-AVv">
+                                        <rect key="frame" x="13" y="147" width="431" height="177"/>
+                                        <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                        <subviews>
+                                            <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="UNc-os-2LU">
+                                                <rect key="frame" x="102" y="26" width="226" height="45"/>
+                                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                                <state key="normal" title="Next random in the same subject"/>
+                                            </button>
+                                            <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="wD9-Ui-BIZ">
+                                                <rect key="frame" x="110" y="65" width="211" height="45"/>
+                                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                                <state key="normal" title="Go back to the selected object"/>
+                                            </button>
+                                            <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="4DO-U1-Bzr">
+                                                <rect key="frame" x="154" y="105" width="123" height="45"/>
+                                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                                <state key="normal" title="Back to the scene"/>
+                                            </button>
+                                        </subviews>
+                                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                    </view>
+                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Result (correct or not)" textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="3" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="FOK-hY-EYk">
+                                        <rect key="frame" x="43" y="33" width="370" height="91"/>
+                                        <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                        <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                        <nil key="textColor"/>
+                                        <nil key="highlightedColor"/>
+                                    </label>
+                                </subviews>
+                                <color key="backgroundColor" red="0.071715325159999996" green="0.92366986949999996" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                            </view>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                         <constraints>
@@ -147,8 +190,13 @@
                     </view>
                     <connections>
                         <outlet property="backgroundImage" destination="UVd-Wa-6hN" id="NSY-dh-DXE"/>
+                        <outlet property="goBackToObject" destination="wD9-Ui-BIZ" id="6Cw-xY-aLk"/>
+                        <outlet property="goBackToScene" destination="4DO-U1-Bzr" id="grL-sC-RdN"/>
                         <outlet property="intermediateView" destination="Wlx-bc-7gX" id="O2A-bw-Pvu"/>
+                        <outlet property="nextQuestionInSubject" destination="UNc-os-2LU" id="AdL-Ai-se3"/>
                         <outlet property="questionView" destination="UOA-zT-18C" id="ts6-A9-cU0"/>
+                        <outlet property="resultText" destination="FOK-hY-EYk" id="MMa-yK-iaA"/>
+                        <outlet property="resultView" destination="qir-dE-vN8" id="m8t-Ha-WQD"/>
                         <outlet property="selectedAlternativeFive" destination="Qa6-MS-NUm" id="UON-4r-NPW"/>
                         <outlet property="selectedAlternativeFour" destination="cW4-PL-5Wa" id="Tq2-Nt-ZX7"/>
                         <outlet property="selectedAlternativeOne" destination="yLi-zE-PcI" id="ugd-2D-yv5"/>
