--- a/miniChallenge/Base.lproj/GameViewController.storyboard
+++ b/miniChallenge/Base.lproj/GameViewController.storyboard
@@ -24,8 +24,16 @@
                             <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="UVd-Wa-6hN">
                                 <rect key="frame" x="0.0" y="20" width="667" height="355"/>
                             </imageView>
+                            <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="c85-iP-CdJ">
+                                <rect key="frame" x="0.0" y="25" width="97" height="30"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <state key="normal" title="Back"/>
+                                <connections>
+                                    <segue destination="CaS-Ns-taR" kind="unwind" unwindAction="unwindFromSecond:" id="41e-XV-vYk"/>
+                                </connections>
+                            </button>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="0" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="iai-GL-UrR">
-                                <rect key="frame" x="600" y="25" width="65" height="21"/>
+                                <rect key="frame" x="569" y="25" width="96" height="21"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMinX="YES" widthSizable="YES" heightSizable="YES" flexibleMaxY="YES"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="28"/>
                                 <color key="textColor" red="0.99965387582778931" green="0.30182969203077686" blue="0.29272650619938717" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
@@ -172,6 +180,13 @@
                                         <nil key="textColor"/>
                                         <nil key="highlightedColor"/>
                                     </label>
+                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Label" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Qiq-Jh-INC">
+                                        <rect key="frame" x="13" y="104" width="435" height="36"/>
+                                        <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                        <fontDescription key="fontDescription" type="system" pointSize="13"/>
+                                        <nil key="textColor"/>
+                                        <nil key="highlightedColor"/>
+                                    </label>
                                 </subviews>
                                 <color key="backgroundColor" red="0.071715325159999996" green="0.92366986949999996" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                             </view>
@@ -189,12 +204,15 @@
                         </constraints>
                     </view>
                     <connections>
+                        <outlet property="backButton" destination="c85-iP-CdJ" id="0h1-KE-Cs8"/>
                         <outlet property="backgroundImage" destination="UVd-Wa-6hN" id="NSY-dh-DXE"/>
                         <outlet property="goBackToObject" destination="wD9-Ui-BIZ" id="6Cw-xY-aLk"/>
                         <outlet property="goBackToScene" destination="4DO-U1-Bzr" id="grL-sC-RdN"/>
                         <outlet property="intermediateView" destination="Wlx-bc-7gX" id="O2A-bw-Pvu"/>
                         <outlet property="nextQuestionInSubject" destination="UNc-os-2LU" id="AdL-Ai-se3"/>
+                        <outlet property="playerScore" destination="iai-GL-UrR" id="sWs-VD-smG"/>
                         <outlet property="questionView" destination="UOA-zT-18C" id="ts6-A9-cU0"/>
+                        <outlet property="resultHint" destination="Qiq-Jh-INC" id="7id-Hy-ABd"/>
                         <outlet property="resultText" destination="FOK-hY-EYk" id="MMa-yK-iaA"/>
                         <outlet property="resultView" destination="qir-dE-vN8" id="m8t-Ha-WQD"/>
                         <outlet property="selectedAlternativeFive" destination="Qa6-MS-NUm" id="UON-4r-NPW"/>
@@ -215,6 +233,7 @@
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="zcI-uB-pyh" userLabel="First Responder" sceneMemberID="firstResponder"/>
+                <exit id="CaS-Ns-taR" userLabel="Exit" sceneMemberID="exit"/>
             </objects>
             <point key="canvasLocation" x="2739.5802098950526" y="-18.399999999999999"/>
         </scene>
